整理拆除大屏后的index

--- a/src/main/webapp/WEB-INF/pages/layout/fullScreen_map.html
+++ b/src/main/webapp/WEB-INF/pages/layout/fullScreen_map.html
@@ -179,7 +179,7 @@
 <script>
     $(function () {
         var $fullPage = $("#l.fullScreen_map");
-        //右上角的图表
+        //右上角的图表——
         myChartFlatRT_full = echarts.init($fullPage.find(".flat-right-top .myChart")[0]);
         //平面左上的环形图
         myChartFlatLT_full = echarts.init($fullPage.find(".flat-left-top .myChart")[0]);
@@ -193,5 +193,5 @@
         reloadLeftData();
 
     });
-    pageResize();
+//    pageResize();
 </script>
