--- a/src/main/webapp/WEB-INF/pages/layout/left.html
+++ b/src/main/webapp/WEB-INF/pages/layout/left.html
@@ -1,4 +1,4 @@
-     <div id="l" class="l left3x3" style="display: none">
+     <div id="l" class="l left3x3">
      <!--<div id="l" class="l" >-->
         <header>
             <span class="mainLogo"></span>
@@ -15,8 +15,9 @@
                 <img class="flat" src="${contextPath!}/static/img/ico/btn_flat_off.png">
             </span>
             <span class="fullScreen">
-                <span class="flat-btnTip">全屏</span>
+                <span class="flat-btnTip">全屏</span><a href="${contextPath!}/lab/full">
                 <img class="fullScreen" src="${contextPath!}/static/img/labMain/labOprateState_nextPage_active.png">
+                </a>
             </span>
         </div>
         <div class="switchGroup">
@@ -191,29 +192,29 @@
 <script>
     var myCharts = [];
     var myChartFlatRT;
-    var myChartFlatRT_full;
+//    var myChartFlatRT_full;
     var myChartFlatLT;
-    var myChartFlatLT_full;
+//    var myChartFlatLT_full;
     var myChartFlatRB;
     var myChartFlatLB;
-    var myChartFlatLB_full;
+//    var myChartFlatLB_full;
     var pathSymbols = {
         bar_chip: '${contextPath!}/static/img/bar_chip.png'
     };
     $(function () {
         //右上角的图表
         myChartFlatRT = echarts.init($("#l.left3x3").find(".flat-right-top .myChart")[0]);
-        myChartFlatRT_full = echarts.init($("#l.fullScreen_map").find(".flat-right-top .myChart")[0]);
+//        myChartFlatRT_full = echarts.init($("#l.fullScreen_map").find(".flat-right-top .myChart")[0]);
         //平面左上的环形图
         myChartFlatLT = echarts.init($("#l.left3x3").find(".flat-left-top .myChart")[0]);
-        myChartFlatLT_full = echarts.init($("#l.fullScreen_map").find(".flat-left-top .myChart")[0]);
+//        myChartFlatLT_full = echarts.init($("#l.fullScreen_map").find(".flat-left-top .myChart")[0]);
         //右下角的图表
 //        myChartFlatRB = echarts.init($("#l").find(".flat-right-bottom .myChart")[0]);
 
         //左下角的图表
         myChartFlatLB = echarts.init($("#l.left3x3").find(".flat-left-bottom .myChart")[0]);
-        myChartFlatLB_full = echarts.init($("#l.fullScreen_map").find(".flat-left-bottom .myChart")[0]);
-        myCharts = [myChartFlatLT,myChartFlatLT_full, myChartFlatRT,myChartFlatRT_full, myChartFlatLB,myChartFlatLB_full];
+//        myChartFlatLB_full = echarts.init($("#l.fullScreen_map").find(".flat-left-bottom .myChart")[0]);
+        myCharts = [myChartFlatLT, myChartFlatRT, myChartFlatLB];
         //左侧平面地图及其他左侧数据
         reloadLeftData();
 
