--- a/src/main/webapp/WEB-INF/pages/layout/tab/tab2.html
+++ b/src/main/webapp/WEB-INF/pages/layout/tab/tab2.html
@@ -213,7 +213,7 @@
             var bodyFontSize = pageH / 595 * 100 + "%";
             bodyScale = pageH / 595;
             $("body").css("font-size", bodyFontSize);
-            $(".fullScreen_map").css("width", pageW);
+//            $(".fullScreen_map").css("width", pageW);
 //        console.log("~~~~~~~~~窗口高度：" + pageH + ",\n宽度:"+pageW+" \nbody字号：" + bodyFontSize)
         }
         pageResize();
