--- a/src/main/webapp/static/css/common.css
+++ b/src/main/webapp/static/css/common.css
@@ -78,12 +78,12 @@ h3 {
 /*整个页面布局*/
 #content{
   display: flex;
-  width:3186px;
   height:100%;
-  background-color: #04032d;
- /*  background: url("../img/bg-2.jpg") no-repeat; */
- /*  background-size: 100% 100%; */
-  float: left;
+  /*width:100%;*/
+  /*background-color: #04032d;*/
+   background: url("../img/bg-2.jpg") no-repeat;
+   background-size: 100% 100%;
+  /*float: left;*/
   /*background-color: #0a1f35;*/
   /*background-color: #000208;*/
   /*background-color: #04032d;*/
