--- a/src/main/webapp/static/css/fullScreen_map.css
+++ b/src/main/webapp/static/css/fullScreen_map.css
@@ -1,5 +1,5 @@
 #l.fullScreen_map {
-    /*width: 100%;*/
+    width: 100%;
     /*width: calc(100% - 42px);*/
     height: 100%;
     position: absolute;
