去除冗余引入的css和js

--- a/src/main/webapp/WEB-INF/pages/layout/centerLabWorld.html
+++ b/src/main/webapp/WEB-INF/pages/layout/centerLabWorld.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8" name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
     <title>中海博睿实验室</title>
-    <link rel="stylesheet" href="../static/asserts/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../static/css/common.css">
+    <!--<link rel="stylesheet" href="../static/asserts/css/bootstrap.min.css">-->
+    <!--<link rel="stylesheet" href="../static/css/common.css">-->
     <link rel="stylesheet" href="../static/css/labMain.css">
     <link rel="stylesheet" href="../static/css/labAnalysis.css">
     <link rel="stylesheet" href="../static/css/labOprateState.css">
@@ -696,10 +696,10 @@
 </body>
 </html>
 
-<script src="../static/asserts/js/jquery-2.2.4.js"></script>
-<script src="../static/asserts/echarts/echarts-3.5.2.js"></script>
+<!--<script src="../static/asserts/js/jquery-2.2.4.js"></script>-->
+<!--<script src="../static/asserts/echarts/echarts-3.5.2.js"></script>-->
 <!--<script src="../static/js/manyEcharts.js"></script>-->
-<script src="../static/asserts/js/bootstrap.min.js"></script>
+<!--<script src="../static/asserts/js/bootstrap.min.js"></script>-->
 <script src="../static/js/centerLabWorld.js"></script>
 <script>
     var bodyScale = 1;//原始比例1
