--- a/src/main/webapp/WEB-INF/pages/layout/tab/tab2.html
+++ b/src/main/webapp/WEB-INF/pages/layout/tab/tab2.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!--<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,13 +6,13 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <link rel="stylesheet" href="${contextPath!}/static/asserts/css/bootstrap.min.css">
-    <link rel="stylesheet" href="${contextPath!}/static/css/common.css">
-    <link rel="stylesheet" href="${contextPath!}/static/css/index_left.css">
-    <link rel="stylesheet" href="${contextPath!}/static/css/index_right.css">
+    &lt;!&ndash;<link rel="stylesheet" href="${contextPath!}/static/asserts/css/bootstrap.min.css">&ndash;&gt;
+    &lt;!&ndash;<link rel="stylesheet" href="${contextPath!}/static/css/common.css">&ndash;&gt;
+    &lt;!&ndash;<link rel="stylesheet" href="${contextPath!}/static/css/index_left.css">&ndash;&gt;
+    &lt;!&ndash;<link rel="stylesheet" href="${contextPath!}/static/css/index_right.css">&ndash;&gt;
     <link rel="stylesheet" href="${contextPath!}/static/css/tabs/tab2.css">
 </head>
-<body>
+<body>-->
 <div id="tab2" class="box selected">
     <div id="tab2_left">
         <!--分页按钮-->
@@ -190,19 +190,19 @@
         </div>
     </div>
 </div>
-</body>
-</html>
-<script> var contextPath = '${contextPath!}';</script>
-<script src="${contextPath!}/static/asserts/js/jquery-2.2.4.js"></script>
-<script src="${contextPath!}/static/asserts/js/bootstrap.min.js"></script>
-<script src="${contextPath!}/static/asserts/echarts/echarts-3.5.2.js"></script>
-<script src="${contextPath!}/static/js/manyEcharts.js?time=New Date()"></script>
-<script src="${contextPath!}/static/js/common.js?time=New Date()"></script>
-<script src="${contextPath!}/static/js/main_right.js?time=New Date()"></script>
-<script src="${contextPath!}/static/js/tabs/tab2.js?time=New Date()"></script>
+<!--</body>
+</html>-->
+<!--<script> var contextPath = '${contextPath!}';</script>-->
+<!--<script src="${contextPath!}/static/asserts/js/jquery-2.2.4.js"></script>-->
+<!--<script src="${contextPath!}/static/asserts/js/bootstrap.min.js"></script>-->
+<!--<script src="${contextPath!}/static/asserts/echarts/echarts-3.5.2.js"></script>-->
+<!--<script src="${contextPath!}/static/js/manyEcharts.js?time=New Date()"></script>-->
+<!--<script src="${contextPath!}/static/js/common.js?time=New Date()"></script>-->
+<!--<script src="${contextPath!}/static/js/main_right.js?time=New Date()"></script>-->
+<!--<script src="${contextPath!}/static/js/tabs/tab2.js?time=New Date()"></script>-->
 <script>
     $(function () {
-        var bodyScale = 1;
+/*        var bodyScale = 1;
         var pageH;
         var pageW;
         pageH = $(window).height();
@@ -216,7 +216,7 @@
 //            $(".fullScreen_map").css("width", pageW);
 //        console.log("~~~~~~~~~窗口高度：" + pageH + ",\n宽度:"+pageW+" \nbody字号：" + bodyFontSize)
         }
-        pageResize();
+        pageResize();*/
 
         loadTab2Data();
     });
