--- a/src/main/webapp/WEB-INF/pages/layout/left.html
+++ b/src/main/webapp/WEB-INF/pages/layout/left.html
@@ -186,7 +186,7 @@
     </div>
 
 
- <script src="${contextPath!}/static/asserts/echarts/echarts-3.5.2.js"></script>
+ <!--<script src="${contextPath!}/static/asserts/echarts/echarts-3.5.2.js"></script>-->
 <script src="${contextPath!}/static/js/statistics.js?time=New Date()"></script>
 <script src="${contextPath!}/static/js/main_left.js?time=New Date()"></script>
 <script>
