--- a/src/main/webapp/WEB-INF/pages/layout/right.html
+++ b/src/main/webapp/WEB-INF/pages/layout/right.html
@@ -1,3 +1,9 @@
+<head>
+    <link rel="stylesheet" href="${contextPath!}/static/css/tabs/tab3.css">
+    <link rel="stylesheet" href="${contextPath!}/static/css/tabs/tab2.css">
+    <link rel="stylesheet" href="${contextPath!}/static/css/tabs/tab4.css">
+</head>
+
 <div id="r" style="">
 
     <!--这里是后面4屏的代码-->
@@ -45,7 +51,6 @@
 </div>
 <script src="${contextPath!}/static/asserts/js/highcharts.js"></script>
 <script src="${contextPath!}/static/js/main_right.js?time=New Date()"></script>
-
 <script src="${contextPath!}/static/js/tabs/tab2.js?time=New Date()"></script>
 <script src="${contextPath!}/static/js/tabs/tab3.js?time=New Date()"></script>
 <script src="${contextPath!}/static/js/tabs/tab4.js?time=New Date()"></script>
