--- a/src/main/webapp/static/css/fullScreen_map.css
+++ b/src/main/webapp/static/css/fullScreen_map.css
@@ -1,12 +1,12 @@
 #l.fullScreen_map {
-    width: 100%;
-    /*width: calc(100% - 42px);*/
+    /*width: 100%;*/
     height: 100%;
     position: absolute;
+    color:#6cf;
     z-index: 10;
      background-image: url(../img/bg-2.jpg);
      background-size: 100% 100%;
-    background-color:#04032d;
+    /*background-color:#04032d;*/
     font-size: 1.5em;
     overflow: hidden;
 }
