我也不知道我改了哪些

--- a/src/main/webapp/WEB-INF/pages/layout/centerLab.html
+++ b/src/main/webapp/WEB-INF/pages/layout/centerLab.html
@@ -555,7 +555,7 @@
                         </div>
                     </div>
                     <div class="la_data_right">
-                        <p>近12个月订单及时率趋势图</p>
+                        <p>月度订单及时率趋势图</p>
                         <div class="right_echart" id="echart_four"></div>
                     </div>
                 </div><!--center-->
@@ -578,7 +578,7 @@
                         </div>
                     </div>
                     <div class="la_data_right">
-                        <p>近12个月用户满意度趋势图</p>
+                        <p>月度用户满意度趋势图</p>
                         <div class="right_echart" id="echart_six"></div>
                     </div>
                 </div><!--la_bottom-->
