--- a/src/main/webapp/WEB-INF/pages/layout/tab/tab2.html
+++ b/src/main/webapp/WEB-INF/pages/layout/tab/tab2.html
@@ -17,8 +17,8 @@
                 <div class="yunying_left_top">
                     <div class="rate">
                         <div class="title">实验室在线率</div>
-                        <div class="title">实验室在线率</div>
-                        <div class="title">实验室在线率</div>
+                        <div class="title">设备完好率</div>
+                        <div class="title">设备利用率</div>
                     </div>
                     <div class="echarts_box">
                         <div id="myChart1"></div>
@@ -128,7 +128,7 @@
                     </div>
                     <div class="bottom_right">
                         <div class="rate">
-                            <div class="title">海尔参与制定标准数</div>
+                            <div class="title">海尔产品涉及标准数</div>
                         </div>
                         <div class="biaozhun_right_echarts">
                             <div class="biaozhun_box">
