隐藏“点击重置”按钮

--- a/src/main/webapp/WEB-INF/pages/layout/left.html
+++ b/src/main/webapp/WEB-INF/pages/layout/left.html
@@ -8,11 +8,11 @@
         <div class="btnGroup">
             <span class="oneBtn">
                 <span class="sphere-btnTip">地球</span>
-                <img class="sphere" src="${contextPath!}/static/img/ico/btn_sphere_on.png">
+                <img class="sphere" src="${contextPath!}/static/img/ico/btn_sphere_off.png">
             </span>
             <span class="oneBtn">
                 <span class="flat-btnTip">平面</span>
-                <img class="flat" src="${contextPath!}/static/img/ico/btn_flat_off.png">
+                <img class="flat" src="${contextPath!}/static/img/ico/btn_flat_on.png">
             </span>
             <span class="fullScreen">
                 <span class="flat-btnTip">全屏</span><a href="${contextPath!}/lab/full">
@@ -94,7 +94,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div sty>
             <div class="switch flat">
                 <div class="flat-main">
                     <div class="flat-left">
