为了获取青贝的正确版本

--- a/src/main/webapp/WEB-INF/pages/layout/left.html
+++ b/src/main/webapp/WEB-INF/pages/layout/left.html
@@ -21,7 +21,7 @@
             </span>
         </div>
         <div class="switchGroup">
-            <div class="switch sphere">
+            <div class="switch sphere" style="display: none">
                 <div class="sphere-left">
                     <div class="sphere-left-top">
                         <div class="chartBorder">
@@ -95,7 +95,7 @@
                     </div>
                 </div>
             </div sty>
-            <div class="switch flat">
+            <div class="switch flat" style="display: flex">
                 <div class="flat-main">
                     <div class="flat-left">
                         <div class="flat-left-top">
