--- a/src/main/webapp/WEB-INF/pages/layout/fullScreen_map.html
+++ b/src/main/webapp/WEB-INF/pages/layout/fullScreen_map.html
@@ -14,7 +14,7 @@
                 <img class="flat" src="${contextPath!}/static/img/ico/btn_flat_off.png">
         </span>
         <span class="quit">
-                <span class="flat-btnTip">切换</span><a href="${contextPath!}/lab/index">
+                <span class="flat-btnTip">切换</span><a href="${contextPath!}/lab/full">
                 <img class="quit" src="${contextPath!}/static/img/labMain/labMain_toTotalStatus.png"></a>
         </span>
     </div>
