国外实验室

--- a/src/main/webapp/WEB-INF/pages/layout/centerLabWorld.html
+++ b/src/main/webapp/WEB-INF/pages/layout/centerLabWorld.html
@@ -17,21 +17,21 @@
 <div class="labMain_content_country" style="display: none;">
     <!--<div class="labMain_content" >-->
     <div class="labMain_content_top">
-        <h1>中海博睿数据中心</h1>
+        <h1 id="labName">中海博睿数据中心</h1>
         <div class="labMain_ct_btn">
             <div class="icon"></div>
             <h3>返回上一级</h3>
         </div>
         <div class="labMain_ct_btn">
             <div class="icon"></div>
-            <h3>中海博睿实验室</h3>
+            <h3 id="labnameIcon">中海博睿实验室</h3>
         </div>
     </div><!--头部content_top-->
 
     <div class="labMain_content_bottom">
         <!--中海博睿实验室-->
         <div class="labMain_cb_left labMain_cb_left_column zhbr_lab labMain_cb_left_show">
-            <h3 class="lab_title">中海博睿实验室</h3>
+            <h3 class="lab_title" id="secondName">中海博睿实验室</h3>
 
             <!--上侧-->
             <div class="labMain_cbl_one">
