加载视频等

--- a/src/main/webapp/WEB-INF/pages/layout/left.html
+++ b/src/main/webapp/WEB-INF/pages/layout/left.html
@@ -15,7 +15,7 @@
                 <img class="flat" src="${contextPath!}/static/img/ico/btn_flat_on.png">
             </span>
             <span class="fullScreen">
-                <span class="flat-btnTip">全屏</span><a href="${contextPath!}/lab/full">
+                <span class="flat-btnTip">全屏</span><a href="${contextPath!}/lab/index?fromPage=fullScreen">
                 <img class="fullScreen" src="${contextPath!}/static/img/labMain/labOprateState_nextPage_active.png">
                 </a>
             </span>
