国外实验室数据换行

--- a/src/main/webapp/static/css/centerLabWorld.css
+++ b/src/main/webapp/static/css/centerLabWorld.css
@@ -19,3 +19,10 @@
     width: 100%;
     overflow: hidden;
 }
+.labMain_content_country .zhbr_lab h3.lab_title {
+    top: 1%;
+    left: 8.8%;
+    font-size: 1.8em;
+    width: 12%;
+    text-align: center;
+}
