--- a/src/main/webapp/static/css/labMain.css
+++ b/src/main/webapp/static/css/labMain.css
@@ -189,6 +189,7 @@ a, a:hover {
 }
 .labMain_cbl_one .labMain_cblt_tone p{
     font-size: 1.1em;
+    text-indent: 2em;
 }
 
 .labMain_cbl_two .labMain_cblt_ttwo {
