--- a/src/main/webapp/static/css/index_left.css
+++ b/src/main/webapp/static/css/index_left.css
@@ -121,6 +121,7 @@
     letter-spacing: .05em;
     line-height: 1.2em;
     color: #66CCFE;
+    /* font-weight:700; */
 
 }
 #l h1:nth-of-type(1){
