--- a/src/main/webapp/WEB-INF/pages/layout/left.html
+++ b/src/main/webapp/WEB-INF/pages/layout/left.html
@@ -144,7 +144,7 @@
                     </div>
                 </div>
                 <!--平面地图下面的导航-->
-                <div class="flat-footer controlBar">
+                <div class="flat-footer controlBar" style="z-index:9999">
                     <div class="legend">
                         <div class="legend-l navSwitch">产线</div>
                         <div class="legend-r navSwitch">实验室</div>
