提示文字修改

--- a/src/main/webapp/WEB-INF/pages/layout/centerLab.html
+++ b/src/main/webapp/WEB-INF/pages/layout/centerLab.html
@@ -532,7 +532,7 @@
                         </div>
                     </div>
                     <div class="la_data_right">
-                        <p>近12个月一次合格率趋势图</p>
+                        <p>月度一次合格率趋势图</p>
                         <div class="right_echart" id="echart_two"></div>
                     </div>
                 </div>
