--- a/src/main/webapp/static/css/centerLabWorld.css
+++ b/src/main/webapp/static/css/centerLabWorld.css
@@ -26,3 +26,8 @@
     width: 12%;
     text-align: center;
 }
+
+.labMain_content_country .labMain_cbr_three  .labMain_cbro_content{
+    background: url("../img/labMain/5.png") no-repeat;
+    background-size: 100% 100%;
+}
