修改右边中海博睿和优化部分代码

--- a/src/main/webapp/WEB-INF/pages/layout/fullScreen_map.html
+++ b/src/main/webapp/WEB-INF/pages/layout/fullScreen_map.html
@@ -1,4 +1,7 @@
 <div id="l" class="l fullScreen_map">
+<script>
+    pageResize();
+</script>
     <header>
         <span class="mainLogo"></span>
         <h1>全球实验室数据中心</h1>
@@ -195,5 +198,4 @@
         reloadLeftData();
 
     });
-//    pageResize();
 </script>
