--- a/src/main/webapp/WEB-INF/pages/layout/ulab.html
+++ b/src/main/webapp/WEB-INF/pages/layout/ulab.html
@@ -25,7 +25,7 @@
         function pageResize() {
             $("body").css("font-size", bodyFontSize);
             $("#content").css("width", pageW);
-            $(".fullScreen_map").css("width", pageW);//全屏页面是绝对定位
+            $(".fullScreen_map").css("width", pageW);//全屏页面是绝对定位,宽度100%只能取自屏幕
             console.log("~~~~~~~~~窗口高度：" + pageH + ",\n宽度:"+pageW+" \nbody字号：" + bodyFontSize)
         }
     </script>
