--- a/src/main/webapp/static/css/labMain.css
+++ b/src/main/webapp/static/css/labMain.css
@@ -32,8 +32,8 @@ a, a:hover {
 /**中海实验室  labMain start**/
 /*content star*/
 .labMain_content{
-   width: 98%;
-    height: 100%;
+   /*width: 98%;*/
+    /*height: 100%;*/
     /*background: url(../img/bg_star2.jpg) center center no-repeat;*/
     /*background-size: cover;*/
 
