除去多次定义的bodyScale，修改中海博瑞曲线y轴的名称大小位置

--- a/src/main/webapp/WEB-INF/pages/layout/ulab.html
+++ b/src/main/webapp/WEB-INF/pages/layout/ulab.html
@@ -14,11 +14,10 @@
          一共 7x3 个屏幕，每一块屏幕是1360x768，
          总共的大小就是9520x2304，比预计像素少7x6=42个像素。*/
 
-        var bodyScale = 1, bodyFontSize = 1;
         var pageH = $(window).height();
         var pageW = pageH * 16 * 7 / (9 * 3);
-        bodyFontSize = pageH / 595 * 100 + "%";
-        bodyScale = pageH / 595;
+        var bodyScale = pageH / 595;
+        var bodyFontSize = bodyScale * 100 + "%";
         if (pageH > 2300) { // 如果是大屏幕(2304)
             pageW -= 42
         }
