--- a/src/main/webapp/static/asserts/echarts/flatMapAutoTip.css
+++ b/src/main/webapp/static/asserts/echarts/flatMapAutoTip.css
@@ -13,14 +13,16 @@
 }
 
 .echart_tip.fade_out {
+    transition-delay: 2s;
     opacity: 0;
-    transition: opacity 4000ms;
-    -moz-transition: opacity 4000ms;
-    -webkit-transition: opacity 4000ms;
-    -o-transition: opacity 4000ms;
+    transition: opacity 2000ms;
+    -moz-transition: opacity 2000ms;
+    -webkit-transition: opacity 2000ms;
+    -o-transition: opacity 2000ms;
 }
 
 .echart_tip.fade_in {
+    transition-delay: 2s;
     opacity: 1;
     transition: opacity 30000ms;
     -moz-transition: opacity 30000ms;
@@ -28,71 +30,49 @@
     -o-transition: opacity 30000ms;
 }
 
-.echart_tip.left.top > .echart_content {
-    bottom: 3.3em;
-    right: 2.05em;
+.echart_tip > .echart_content{ /*所有提示框内的文本*/
+    /*font-size:2em;*/
+    color:#ffffff;
+    /*text-shadow:0.15em 0.15em 0.15em rgba(0,0,0,0.9);*/
     background-color: black;
+}
+.echart_tip.bottom > .dialog_title.echart_content {
+    top: auto;
+    bottom: -3.4em;
     padding-top: 0.5em;
-    font-family: "Microsoft Yahei", "微软雅黑";
-    font-size: 2em;
 }
 
+.echart_tip.left.top > .echart_content { /*左上*/
+    bottom: 3.3em;
+    right: 2.15em;
+}
 .echart_tip.left.top > .echart_tip_arrow {
     transform: rotate(-32deg);
-    -ms-transform: rotate(-32deg);
-    -moz-transform: rotate(-32deg);
-    -webkit-transform: rotate(-32deg);
-    -o-transform: rotate(-32deg);
 }
+/*
 
-.echart_tip.right.top > .echart_content {
-    bottom: 3em;
-    right: -2em;
+.echart_tip.right.top > .echart_content { !*右上*!
+    bottom: 3.3em;
+    left: -2.05em;
 }
 
 .echart_tip.right.top > .echart_tip_arrow {
     transform: rotate(32deg);
-    -ms-transform: rotate(32deg);
-    -moz-transform: rotate(32deg);
-    -webkit-transform: rotate(32deg);
-    -o-transform: rotate(32deg);
 }
-
-.echart_tip.left.bottom > .echart_content {
-    bottom: 4.8em;
+*/
+.echart_tip.left.bottom > .echart_content { /*左下*/
     right: 2.15em;
 }
-
 .echart_tip.left.bottom > .echart_tip_arrow {
     transform: rotate(-148deg);
-    -ms-transform: rotate(-148deg);
-    -moz-transform: rotate(-148deg);
-    -webkit-transform: rotate(-148deg);
-    -o-transform: rotate(-148deg);
 }
-
-.echart_tip.right.bottom > .echart_content {
-    bottom: 4.8em;
-    right: -6.4em;
-    background-color: black;
+.echart_tip.right.bottom > .echart_content { /*右下*/
+    left: 2.15em;
 }
-
 .echart_tip.right.bottom > .echart_tip_arrow {
-    transform: rotate(-148deg);
-    -ms-transform: rotate(-148deg);
-    -moz-transform: rotate(-148deg);
-    -webkit-transform: rotate(-148deg);
-    -o-transform: rotate(-148deg);
+    transform: rotate(148deg);
 }
 
-.echart_tip.bottom > .dialog_title.echart_content {
-    top: auto;
-    bottom: -3.4em;
-    font-size:2em;
-    background-color: black;
-    padding-top: 0.5em;
-    font-family: "Microsoft Yahei", "微软雅黑";
-}
 
 .dialog_title {
     border-bottom: 0.15em #fff solid;
@@ -163,9 +143,11 @@
 }
 
 .echart_tip_arrow > .echart_tip_line {
-    height: 3.6em;
+    /*height: 3.6em;*/
+    height: 7em;
     left: 0px;
-    top: -4.8em;
+    /*top: -4.8em;*/
+    top: -8em;
     border-left: 0.2em solid #fff;
     position: absolute;
 }
