--- a/src/main/webapp/WEB-INF/pages/layout/fullScreen_map.html
+++ b/src/main/webapp/WEB-INF/pages/layout/fullScreen_map.html
@@ -110,8 +110,8 @@
                     </div>
                 </div>
                 <div class="mapArea" style="z-index: 999">
-                    <!--<h2>数据互联&emsp;实时共享&emsp;提效增值</h2>-->
                     <!--平面地图位置-->
+                    <iframe id="iframeFlatMap" class="iframe map" scrolling="no" frameborder="0" src="${contextPath!}/lab/flatMap" ></iframe>
                 </div>
                 <div class="flat-right">
                     <div class="flat-right-bottom">
@@ -176,7 +176,6 @@
                 </div>
             </div>
         </div>
-
     </div>
 </div>
 <script>
@@ -188,9 +187,6 @@
         myChartFlatRT_full = echarts.init($fullPage.find(".flat-right-top .myChart")[0]);
         //平面左上的环形图
         myChartFlatLT_full = echarts.init($fullPage.find(".flat-left-top .myChart")[0]);
-        //右下角的图表
-//        myChartFlatRB = echarts.init($("#l").find(".flat-right-bottom .myChart")[0]);
-
         //左下角的图表
         myChartFlatLB_full = echarts.init($fullPage.find(".flat-left-bottom .myChart")[0]);
         myCharts = [myChartFlatLT_full, myChartFlatRT_full, myChartFlatLB_full];
