--- a/src/main/webapp/WEB-INF/pages/layout/left.html
+++ b/src/main/webapp/WEB-INF/pages/layout/left.html
@@ -117,7 +117,7 @@
                     </div>
                     <div class="mapArea" style="z-index: 999">
                         <!--平面地图位置-->
-                        <iframe id="iframe" class="iframe map" scrolling="no" frameborder="0" src="${contextPath!}/lab/flatMap"></iframe>
+                        <iframe id="iframeFlatMapL3x3" class="iframe map" scrolling="no" frameborder="0" src="${contextPath!}/lab/flatMap"></iframe>
                     </div>
                     <div class="flat-right">
                         <div class="flat-right-bottom">
@@ -192,31 +192,27 @@
 <script>
     var myCharts = [];
     var myChartFlatRT;
-//    var myChartFlatRT_full;
     var myChartFlatLT;
-//    var myChartFlatLT_full;
     var myChartFlatRB;
     var myChartFlatLB;
-//    var myChartFlatLB_full;
     var pathSymbols = {
         bar_chip: '${contextPath!}/static/img/bar_chip.png'
     };
     $(function () {
         //右上角的图表
         myChartFlatRT = echarts.init($("#l.left3x3").find(".flat-right-top .myChart")[0]);
-//        myChartFlatRT_full = echarts.init($("#l.fullScreen_map").find(".flat-right-top .myChart")[0]);
         //平面左上的环形图
         myChartFlatLT = echarts.init($("#l.left3x3").find(".flat-left-top .myChart")[0]);
-//        myChartFlatLT_full = echarts.init($("#l.fullScreen_map").find(".flat-left-top .myChart")[0]);
-        //右下角的图表
-//        myChartFlatRB = echarts.init($("#l").find(".flat-right-bottom .myChart")[0]);
 
         //左下角的图表
         myChartFlatLB = echarts.init($("#l.left3x3").find(".flat-left-bottom .myChart")[0]);
-//        myChartFlatLB_full = echarts.init($("#l.fullScreen_map").find(".flat-left-bottom .myChart")[0]);
         myCharts = [myChartFlatLT, myChartFlatRT, myChartFlatLB];
         //左侧平面地图及其他左侧数据
         reloadLeftData();
 
+//        $("#iframeFlatMapL3x3").content.createArrData(productCode, labType);
     });
+    function parentMethod(){//平面地图的数据加载
+        $("#iframeFlatMapL3x3")[0].contentWindow.createArrData(productCode, labType);
+    }
 </script>
