--- a/src/main/webapp/WEB-INF/pages/layout/centerLabWorld.html
+++ b/src/main/webapp/WEB-INF/pages/layout/centerLabWorld.html
@@ -635,10 +635,10 @@
             <div class="shishi_right shishi_right_show">
                 <div class='sheshi_right_top'>
                     <ul>
-                      <li>试验编号：<span id="center_sybh_id_world"></span></li>
-                        <li>样品编号：<span id="center_ypbm_id_world"></span></li>
-                        <li>产品型号：<span id="center_cpxh_id_world"></span></li>
-                        <li>试验项目：<span id="center_testPro_id_world"></span></li>
+                      	<li>Report No.：<span id="center_sybh_id_world"></span></li>
+                        <li>Sample code：<span id="center_ypbm_id_world"></span></li>
+                        <li>Model No.：<span id="center_cpxh_id_world"></span></li>
+                        <li>Test Item：<span id="center_testPro_id_world"></span></li>
                     </ul>
                 </div>
                 <div class="sheshi_right_left">
