--- a/src/main/webapp/static/css/labLine.css
+++ b/src/main/webapp/static/css/labLine.css
@@ -92,7 +92,7 @@
     height: auto;
     text-align: left;
     position: relative;
-    padding-top: 5%;
+    /*padding-top: 5%;*/
 
 }
 .sheshi_tab_list>ul>li a{
@@ -167,6 +167,8 @@
     padding-left: 20%;
     display: inline-block;
     cursor: pointer;
+    border-bottom: 1px solid transparent;
+    border-top: 1px solid transparent;
 }
 .taiwei_hide li:hover{
     background-color: #66ccff;
