--- a/src/main/webapp/WEB-INF/pages/layout/centerLabWorld.html
+++ b/src/main/webapp/WEB-INF/pages/layout/centerLabWorld.html
@@ -17,25 +17,25 @@
 <div class="labMain_content_country" style="display: none;">
     <!--<div class="labMain_content" >-->
     <div class="labMain_content_top">
-        <h1 id="labName">中海博睿数据中心</h1>
+        <h1 id="labName_world">中海博睿数据中心</h1>
         <div class="labMain_ct_btn">
             <div class="icon"></div>
             <h3>返回上一级</h3>
         </div>
         <div class="labMain_ct_btn">
             <div class="icon"></div>
-            <h3 id="labnameIcon">中海博睿实验室</h3>
+            <h3 id="labnameIcon_world">中海博睿实验室</h3>
         </div>
     </div><!--头部content_top-->
 
     <div class="labMain_content_bottom">
         <!--中海博睿实验室-->
         <div class="labMain_cb_left labMain_cb_left_column zhbr_lab labMain_cb_left_show">
-            <h3 class="lab_title" id="secondName">中海博睿实验室</h3>
+            <h3 class="lab_title" id="secondName_world">中海博睿实验室</h3>
 
             <!--上侧-->
             <div class="labMain_cbl_one">
-                <div class="labMain_cblt_tone">
+                <div class="labMain_cblt_tone labMain_cblt_tone_world">
                     <h3>基本介绍</h3>
                     <p>
                         日本研发中心拥有冰箱检测实验室39个，测试台位290个，具备冰箱性能、结构、电子电器以及超前研发技术检测能力。
@@ -46,7 +46,7 @@
                 </div>
                 <!--labMain_cblt_tone-->
 
-                <div class="labMain_cblt_ttwo"><img src="${contextPath!}/static/img/labMain/Japan.jpg"/></div>
+                <div class="labMain_cblt_ttwo labMain_cblt_ttwo_world"><img src="${contextPath!}/static/img/labMain/Japan.jpg"/></div>
                 <!--labMain_cblt_ttwo-->
 
             </div>
