--- a/src/main/webapp/static/css/example.css
+++ b/src/main/webapp/static/css/example.css
@@ -3,7 +3,7 @@
 
 html, body {
     height: 100%;
-    font-family: 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif;
+    /*font-family: 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif;*/
 }
 
 button {
