--- a/src/main/webapp/static/css/labLine.css
+++ b/src/main/webapp/static/css/labLine.css
@@ -72,9 +72,11 @@
 .sheshi_tab_list{
     height:81%;
     width: 61%;
-    overflow: hidden;
+    overflow-x: hidden;
     margin: 0 auto;
     margin-top: 3%;
+    background: url(../img/labMain/dropmenu.png) no-repeat;
+    background-size: 100% 100%;
 
 }
 
@@ -83,9 +85,9 @@
     height: 100%;
     padding-top: 10%;
     /*padding-left: 10%;*/
-    background: url("../img/labMain/dropmenu.png") no-repeat;
+/*     background: url("../img/labMain/dropmenu.png") no-repeat;
     background-size: 100% 100%;
-
+ */
 }
 .sheshi_tab_list>ul>li{
     width: 100%;
@@ -96,7 +98,7 @@
 
 }
 .sheshi_tab_list>ul>li a{
-    margin-left: 9%;
+    margin-left: 5%;
     font-size: 1.2em;
 }
 /*.sheshi_tab_list>ul>li>span{*/
